# dudoxx-whisper-stt

./: .env.example  AGENTS.md  CLAUDE.md  ENV_VARIABLES.md  INSTALL.md  README.md  pyproject.toml
apache2/: README.md  canary.example.com-ssl.conf  canary.example.com.conf  voxtral.example.com-ssl.conf  voxtral.example.com.conf
archived/: IMPORTANT.md
docs/: NVIDIA_CANARY_SETUP.md  VOXTRAL_SETUP.md
faster-whisper/: README.md  requirements.txt  start.sh  streaming_server.py
faster-whisper/config/: .env.example  .env.production
faster-whisper/systemd/: faster-whisper.service
frontend/: .gitignore  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/[locale]/: layout.tsx  page.tsx
frontend/src/app/[locale]/(app)/: layout.tsx
frontend/src/app/[locale]/(app)/record/: page.tsx
frontend/src/app/[locale]/(app)/recordings/: page.tsx
frontend/src/app/[locale]/(app)/recordings/[id]/: page.tsx
frontend/src/app/[locale]/(app)/recordings/[id]/export/: page.tsx
frontend/src/app/[locale]/(app)/settings/: page.tsx
frontend/src/app/[locale]/(app)/transcriptions/: page.tsx
frontend/src/components/ddx/: ddx-badge.tsx  ddx-button.tsx  ddx-card.tsx  ddx-dialog.tsx  ddx-dropdown.tsx  ddx-input.tsx  index.ts
frontend/src/components/layout/: app-header.tsx  app-sidebar.tsx
frontend/src/hooks/: index.ts  use-audio-recorder.ts  use-stt.ts
frontend/src/locales/de/: common.json
frontend/src/locales/en/: common.json
frontend/src/locales/fr/: common.json
frontend/src/providers/: theme-provider.tsx
frontend/src/types/: index.ts
voxtral/: README.md  asr_enhancers.py  requirements.txt  text_processor.py  voxtral_streaming_server.py
voxtral/config/: .env.example
voxtral/systemd/: voxtral-proxy.service  voxtral-vllm.service
whisperlivekit/: __init__.py  basic_server.py  core.py  timed_objects.py
whisperlivekit/diarization/: diart_backend.py
whisperlivekit/simul_whisper/mlx/: simul_whisper.py
whisperlivekit/web/: live_transcription.css  live_transcription.html  live_transcription.js
